samples/_failures_safe/1761040267_3a21cd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f432eb55.c: In function ‘main’:
./samples/SAFE/__tmp_f432eb55.c:173: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_f432eb55.c:172:5: error: expected declaration or statement at end of input
  172 |     } while
      |     ^
